更新关于页面
更新关于页面（删除了一些不必要的文字）。

--- a/about.html
+++ b/about.html
@@ -13,10 +13,7 @@ header-img: "img/home-bg-xingkong.jpg"
 		Sluya ye lekkzorova duzov vihv d haer ore haer fenomen, bev fangak Haer Labotiy sped, vid ŭya Kitay Langu ore Ubetan Langu sped, spasiv.
 		<br><br><strong style="color: #FF0000">
 		全世界无产者，联合起来！<br>
-		Alak mir proletar, soz!<br>
-		Пролетарии всех стран, соединяйтесь!<br>
-		Workers of the world, unite!<br>
-		Proletoj el ĉiuj landoj, unuiĝu!
+		Alak mir proletar, soz!<!--	Proletoj el ĉiuj landoj, unuiĝu!-->
 	</strong></span>
 
 </div>
