--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@ header-img: "img/home-bg-xingkong.jpg"
 <div class="zh post-container">
 
 	<span style="text-align: center;">
-		如果您希望报告更多的哈儿或哈儿现象，以及对哈儿实验室留言，请使用中文或英语留言，谢谢。
+		如果您希望报告更多的哈儿或哈儿现象，以及对哈儿实验室留言，请使用中文、世界语或哈儿语留言，谢谢。
 		<br>
-		Sluya ye lekkzorova duzov vihv d haer ore haer fenomen, bev fangak Haer Labotiy sped, vid ŭya Kitay Langu ore Ubetan Langu sped, spasiv.
+		Sluya ye lekkzorova duzov vihv d haer ore haer fenomen, bev fangak Haer Labotiy sped, vid ŭya Kitay Langu, Esperanto Langu ore Haer Langu sped, spasiv.
 		<br><br><strong style="color: #FF0000">
 		全世界无产者，联合起来！<br>
 		Alak mir proletar, soz!<!--	Proletoj el ĉiuj landoj, unuiĝu!-->
