--- a/about.html
+++ b/about.html
@@ -7,15 +7,102 @@ header-img: "img/home-bg-xingkong.jpg"
 
 <div class="zh post-container">
 
-	<span style="text-align: center;">
-		如果您希望报告更多的哈儿或哈儿现象，以及对哈儿实验室留言，请使用中文、世界语或哈儿语留言，谢谢。
-		<br>
-		Sluya ye lekkzorova duzov vihv d haer ore haer fenomen, bev fangak Haer Labotiy sped, vid ŭya Kitay Langu, Esperanto Langu ore Haer Langu sped, spasiv.
-		<br><br><strong style="color: #FF0000">
-		全世界无产者，联合起来！<br>
-		Alak mir proletar, soz!<!--	Proletoj el ĉiuj landoj, unuiĝu!-->
-	</strong></span>
-
+	<h1>关于哈儿实验室</h1>
+	<p>
+		来自世界的朋友们：<br>
+		欢迎来到哈儿实验室。作为哈儿实验室的第四任领导人，我——<strong>A-8139-21B</strong>——很荣幸向各位介绍哈儿实验室。<br>
+		<h2>一、什么是哈儿实验室？</h2>
+		<p>
+			&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室是哈儿苏维埃社会主义共和国最重要的非政治性组织，是哈儿苏维埃社会主义共和国的根本性组织。其设立目的是对哈儿进行生物学研究。<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室在全国所有行政区的政府部门设立哈儿实验室分部（或称分所）。哈儿实验室另包括在全国的10个特殊分部，00-09作为其名称。<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室永远以“让正常人成为哈儿，让哈儿快乐生活”的基本指导方针和马克思列宁主义的根本方针，为建成真正的共产主义国家而贡献出力量。<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;我们是由一些有牺牲精神的共产主义者组成的，我们永远应当对得起祖国鲜红旗帜背后的烈士们。
+		</p>
+		<h2>二、哈儿实验室的运作</h2>
+		<p>
+		<h3>1.哈儿</h3>
+		<p>
+		<h4>①哈儿是什么？</h4>
+		<p>
+			&nbsp;&nbsp;&nbsp;&nbsp;哈儿，在哈儿语中是“haer”，意为“智慧的愚者”。<strong>哈儿来源于人类，但超越了人类。</strong>哈儿是否是生物有待确认，因为它们没有应激性。它们有不同的性质，其中一些也许很可怕，我们也会对其进行活体实验（<strong>但决不伤害它们</strong>）以研究它们的性质。不要害怕：<strong>它们曾经也是人类</strong>，或许你曾经在街上与曾经的他们擦肩而过，但你也很快会成为哈儿的一员的。
+		</p>
+		<h4>②哈儿的分类</h4>
+		<p>
+			&nbsp;&nbsp;&nbsp;&nbsp;我们通常按<strong>哈儿通用综合能力评定</strong>来测试它们以便正确对它们进行分类。得到的结果为一个有理数（通常为整数），被称作<strong>哈儿综合能力值</strong>（俗称“哈儿智商”，<strong>以下简称“HIQ”</strong>），一般在-200至110之间。正常人的评定也是允许的。一般情况下，正常人的HIQ约在80至110之间。<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;通常，哈儿的HIQ在[-200,50]以内，若不在此区间内则该哈儿<strong>将被销毁</strong>，因为它们<strong>已失去用途或太过危险</strong>。<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;下面是哈儿等级与之对应的HIQ：<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;<strong>表1-1 哈儿HIQ评级表</strong>
+			<table border="1">
+				<tr><th>哈儿HIQ区间</th><th>哈儿等级分类</th></tr>
+				<tr><td>(20,50]</td><td>类人型哈儿</td></tr>
+				<tr><td>(0,20]</td><td>高智商哈儿</td></tr>
+				<tr><td>(-50,0]</td><td>中智商哈儿</td></tr>
+				<tr><td>(-100,-50]</td><td>低智商哈儿</td></tr>
+				<tr><td>[-200,-100]</td><td>化学物质型哈儿</td></tr>
+			</table>
+			&nbsp;&nbsp;&nbsp;&nbsp;我们平等地对待每一个哈儿，让它们不从事生产。
+		</p>
+		<h4>③如何成为哈儿？</h4>
+		<p>
+			&nbsp;&nbsp;&nbsp;&nbsp;我们有许多成为哈儿的途径。我们在推荐一些途径的同时反对一些途径，尽管它们看上去很成功。<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;推荐的有：Ⅰ哈儿门（电击变哈，最安全）；Ⅱ高台坠落（撞击变哈，相当危险）；Ⅲ火箭（爆炸变哈，极度危险）。<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;反对的有：Ⅰ吸食毒品；Ⅱ吸食元素周期表；Ⅲ食用一些类型的蘑菇；Ⅳ炼钢过多。<br>
+			<strong style="color: #FF0000;">&nbsp;&nbsp;&nbsp;&nbsp;切勿使用我们反对的途径成为哈儿！</strong><br>
+		</p>
+		</p>
+		<h3>2.哈儿门</h3>
+		<p>
+			&nbsp;&nbsp;&nbsp;&nbsp;哈儿门，即用电击使人变成哈儿的方法，最为稳妥。<br>
+		</p>
+		<h3>3.实验</h3>
+		<p>
+			<h4>①实验人员</h4>
+			<p>
+				&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室的工作人员都有自己的编号，即随机生成的一串字符，通常格式为“[大写字母A-Z]-[四位整数，不足补0]-[两位整数，不足补0][大写字母A-Z]”，例如：A-8139-21B、S-2231-63D（在早期实验室有一些不规范名称和特殊名称，如：K-526-406Y、G-094等）。<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;通常不用人名称呼，为了避免重名并保护哈儿实验室人员。<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;实验人员通常是素质良好的哈儿共产党员。
+			</p>
+			<h4>②实验过程</h4>
+			<p>
+				&nbsp;&nbsp;&nbsp;&nbsp;实验通常安全而舒适，不会伤害哈儿。少数极危险的实验或会折磨哈儿的实验会事先征得哈儿及其负责人的同意。
+			</p>
+			<h4>③结果发布</h4>
+			<p>
+				&nbsp;&nbsp;&nbsp;&nbsp;对于无须保密的结果，我们将发布在我们的网站上。
+			</p>
+		</p>
+		<h3>4.象征</h3>
+		<p>
+			&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室的旗帜、徽章、颂歌、格言以及其它象征均与哈儿苏维埃社会主义共和国国家象征相同，以彰显哈儿实验室与哈儿共产党及哈儿国密不可分的关系。哈儿工人红军为哈儿实验室所有。
+		</p>
+		</p>
+		<h2>三、哈儿实验室的领导人</h2>
+		<p>
+			<h3>1.领导人列表</h3>
+			<p>表1-2 哈儿实验室领导人列表</p>
+			<table border="1">
+				<tr><th>届数</th><th>时间</th><th>哈儿实验室苏维埃主席</th><th>哈儿实验室苏维埃副主席</th></tr>
+				<tr><td>①</td><td>2018年3月18日——2021年3月16日</td><td>OpenG-qkmb</td><td>G-094（2018年3月20日上任）</td></tr>
+				<tr><td>②</td><td>2021年3月16日——2021年7月4日</td><td>G-094</td><td>K-526-406Y</td></tr>
+				<tr><td>③</td><td>2021年7月4日——2021年8月1日</td><td>K-526-406Y</td><td>A-8139-21B</td></tr>
+				<tr><td>④</td><td>2021年8月1日——今</td><td>A-8139-21B</td><td>S-2231-63D</td></tr>
+			</table>
+			<h3>2.哈儿实验室苏维埃</h3>
+			<p>
+				&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室苏维埃直接领导哈儿实验室总部的一切事务及各一级分部（分所）的基本事务。哈儿实验室苏维埃包括：主席1人；副主席1人；主席行政团5-7人；实验室总部代表20人；实验室各一级分部代表各25人。共计702-704人。哈儿实验室苏维埃以及哈儿实验室各级分部（分所）苏维埃在必要情况下均可向下越级指示。哈儿实验室各分部（分所）苏维埃包括：主席1人；副主席1人；主席协助团5-7人；该级分部（分所）代表15人；其下一级分部（分所）代表各20人（若无下一级则不设）。
+			</p>
+		</p>
+		<h2>四、发展目标</h2>
+		<p>
+			&nbsp;&nbsp;&nbsp;&nbsp;在哈儿共产党据马克思列宁主义的领导下，协助哈儿国及全体哈儿国人民，走向共产主义的最终胜利。
+		</p>
+		以上是对哈儿实验室的简略介绍。如果希望加入我们，请咨询哈儿实验室外事活动部。<br>
+		<strong style="color: #FF0000;">全世界无产者，联合起来！</strong><br>
+		<div style="text-align: right">
+			哈儿实验室苏维埃主席<br>哈儿共产党中央委员会总书记<br>哈儿工人红军战时司令委员会主席<br>A-8139-21B<br>2021年9月20日
+		</div>
+	</p>
+<!--一→h2；1→h3；①→h4-->
 </div>
 
 <!-- Gitalk 评论 start  -->
