--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@ header-img: "img/home-bg-xingkong.jpg"
 		<h2>三、哈儿实验室的领导人</h2>
 		<p>
 			<h3>1.领导人列表</h3>
-			<p>表1-2 哈儿实验室领导人列表</p>
+			<p><strong>表1-2 哈儿实验室领导人列表</strong></p>
 			<table border="1">
 				<tr><th>届数</th><th>时间</th><th>哈儿实验室苏维埃主席</th><th>哈儿实验室苏维埃副主席</th></tr>
 				<tr><td>①</td><td>2018年3月18日——2021年3月16日</td><td>OpenG-qkmb</td><td>G-094（2018年3月20日上任）</td></tr>
