--- a/access/show.html
+++ b/access/show.html
@@ -7,14 +7,14 @@
 </head>
 <body style="background: #000000;">
 <script>
-	window.location.href="show.html";
+	window.location.href="index.html";
 </script>
 <div style="text-align: center; color: #FFFFFF;">
 <h1>页面跳转中…</h1>
 <p>
 您访问了一个无效页面，正在为您跳转至正确页面…
 <br>
-如果您卡在这个页面无法跳转，您可以点击<a style="color: #FFFFFF;" href="show.html">这个链接</a>回到正确页面
+如果您卡在这个页面无法跳转，您可以点击<a style="color: #FFFFFF;" href="index.html">这个链接</a>回到正确页面
 </p>
 <hr>
 <p>&copy;哈儿实验室 保留所有权利。</p>
