--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "关于 - Abet"
 description: "Alak mir proletar, soz!"
-header-img: "img/home-bg-xingkong.jpg"
+header-img: "img/home-bg-o.jpg"
 ---
 
 <div class="zh post-container">
@@ -80,12 +80,12 @@ header-img: "img/home-bg-xingkong.jpg"
 		<p>
 			<h3>1.领导人列表</h3>
 			<p><strong>表1-2 哈儿实验室领导人列表</strong></p>
-			<table border="1">
+			<table border="1" style="text-align: center;">
 				<tr><th>届数</th><th>时间</th><th>哈儿实验室苏维埃主席</th><th>哈儿实验室苏维埃副主席</th></tr>
-				<tr><td>①</td><td>2018年3月18日——2021年3月16日</td><td>OpenG-qkmb</td><td>G-094（2018年3月20日上任）</td></tr>
-				<tr><td>②</td><td>2021年3月16日——2021年7月4日</td><td>G-094</td><td>K-526-406Y</td></tr>
-				<tr><td>③</td><td>2021年7月4日——2021年8月1日</td><td>K-526-406Y</td><td>A-8139-21B</td></tr>
-				<tr><td>④</td><td>2021年8月1日——今</td><td>A-8139-21B</td><td>S-2231-63D</td></tr>
+				<tr><td>1</td><td>2018年3月18日——2021年3月16日</td><td>OpenG-qkmb</td><td>G-094（2018年3月20日上任）</td></tr>
+				<tr><td>2</td><td>2021年3月16日——2021年7月4日</td><td>G-094</td><td>K-526-406Y</td></tr>
+				<tr><td>3</td><td>2021年7月4日——2021年8月1日</td><td>K-526-406Y</td><td>A-8139-21B</td></tr>
+				<tr><td>4</td><td>2021年8月1日——今</td><td>A-8139-21B</td><td>S-2231-63D(2021/8/1-2021/10/10) G-6054-18K(2021/10/10/-今)</td></tr>
 			</table>
 			<h3>2.哈儿实验室苏维埃</h3>
 			<p>
@@ -96,7 +96,7 @@ header-img: "img/home-bg-xingkong.jpg"
 		<p>
 			&nbsp;&nbsp;&nbsp;&nbsp;在哈儿共产党据马克思列宁主义的领导下，协助哈儿国及全体哈儿国人民，走向共产主义的最终胜利。
 		</p>
-		以上是对哈儿实验室的简略介绍。如果希望加入我们，请咨询哈儿实验室外事活动部。<br>
+		以上是对哈儿实验室的简略介绍。如果希望加入我们，请咨询哈儿实验室外事活动部（Haer Labotiy Opnedeka Eruna Foreton，可缩写为OEF）。<br>
 		<strong style="color: #FF0000;">全世界无产者，联合起来！</strong><br>
 		<div style="text-align: right">
 			哈儿实验室苏维埃主席<br>哈儿共产党中央委员会总书记<br>哈儿工人红军战时司令委员会主席<br>A-8139-21B<br>2021年9月20日
