--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@ header-img: "img/home-bg-o.jpg"
 				<tr><td>1</td><td>2018年3月18日——2021年3月16日</td><td>OpenG-qkmb</td><td>G-094（2018年3月20日上任）</td></tr>
 				<tr><td>2</td><td>2021年3月16日——2021年7月4日</td><td>G-094</td><td>K-526-406Y</td></tr>
 				<tr><td>3</td><td>2021年7月4日——2021年8月1日</td><td>K-526-406Y</td><td>A-8139-21B</td></tr>
-				<tr><td>4</td><td>2021年8月1日——今</td><td>A-8139-21B</td><td>S-2231-63D(2021/8/1-2021/10/10) G-6054-18K(2021/10/10/-今)</td></tr>
+				<tr><td>4</td><td>2021年8月1日——今</td><td>A-8139-21B</td><td>S-2231-63D(2021/8/1-2021/10/10)&nbsp;&nbsp;G-6054-18K(2021/10/10-今)</td></tr>
 			</table>
 			<h3>2.哈儿实验室苏维埃</h3>
 			<p>
