--- a/access/index.html
+++ b/access/index.html
@@ -53,7 +53,7 @@
 <img id="img" src="haer-img\\[Number].jpg" alt="[Number]" title="[HName] - [Number]" width="75%"></p>
 </span>
 <hr>
-<p>&copy;哈儿实验室 保留所有权利。<br>&copy;Haer Labotiy Veebet alak poumon.</p>
+<p>&copy;哈儿实验室 保留所有权利。<br>&copy;Haer Labotiy&nbsp;&nbsp;Vebet alak poumon.</p>
 </div>
 <script src="show.js"></script>
 </body>
