--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@ header-img: "img/home-bg-o.jpg"
 
 	<h1>关于哈儿实验室</h1>
 	<p>
-		来自世界的朋友们：<br>
-		欢迎来到哈儿实验室。作为哈儿实验室的第四任领导人，我——<strong>A-8139-21B</strong>——很荣幸向各位介绍哈儿实验室。<br>
+		来自世界的同志们：<br>
+		欢迎来到哈儿实验室。这里有一些关于我们的信息。<br>
 		<h2>一、什么是哈儿实验室？</h2>
 		<p>
 			&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室是哈儿苏维埃社会主义共和国最重要的非政治性组织，是哈儿苏维埃社会主义共和国的根本性组织。其设立目的是对哈儿进行生物学研究。<br>
