--- a/about.html
+++ b/about.html
@@ -28,12 +28,12 @@ header-img: "img/home-bg-o.jpg"
 		</p>
 		<h4>②哈儿的分类</h4>
 		<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;我们通常按<strong>哈儿通用综合能力评定</strong>来测试它们以便正确对它们进行分类。得到的结果为一个有理数（通常为整数），被称作<strong>哈儿综合能力值</strong>（俗称“哈儿智商”，<strong>以下简称“HIQ”</strong>），一般在-200至110之间。正常人的评定也是允许的。一般情况下，正常人的HIQ约在80至110之间。<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;通常，哈儿的HIQ在[-200,50]以内，若不在此区间内则该哈儿<strong>将被销毁</strong>，因为它们<strong>已失去用途或太过危险</strong>。<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;下面是哈儿等级与之对应的HIQ：<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;<strong>表1-1 哈儿HIQ评级表</strong>
+			&nbsp;&nbsp;&nbsp;&nbsp;我们通常按<strong>哈儿通用综合能力评定</strong>来测试它们以便正确对它们进行分类。得到的结果为一个有理数（通常为整数），被称作<strong>哈儿综合能力值</strong>（俗称“哈儿智商”，<strong>以下简称“HIRG”</strong>），一般在-200至110之间。正常人的评定也是允许的。一般情况下，正常人的HIRG约在80至110之间。<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;通常，哈儿的HIRG在[-200,50]以内，若不在此区间内则该哈儿<strong>将被销毁</strong>，因为它们<strong>已失去用途或太过危险</strong>。<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;下面是哈儿等级与之对应的HIRG：<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;<strong id="hirg">表1-1 哈儿HIRG评级表</strong>
 			<table border="1">
-				<tr><th>哈儿HIQ区间</th><th>哈儿等级分类</th></tr>
+				<tr><th>哈儿HIRG区间</th><th>哈儿等级分类</th></tr>
 				<tr><td>(20,50]</td><td>类人型哈儿</td></tr>
 				<tr><td>(0,20]</td><td>高智商哈儿</td></tr>
 				<tr><td>(-50,0]</td><td>中智商哈儿</td></tr>
@@ -73,7 +73,7 @@ header-img: "img/home-bg-o.jpg"
 		</p>
 		<h3>4.象征</h3>
 		<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室的旗帜、徽章、颂歌、格言以及其它象征均与哈儿苏维埃社会主义共和国国家象征相同，以彰显哈儿实验室与哈儿共产党及哈儿国密不可分的关系。哈儿工人红军为哈儿实验室所有。
+			&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室的旗帜、徽章、颂歌、格言以及其它象征由哈儿实验室苏维埃指定。哈儿工人红军为哈儿实验室所有。
 		</p>
 		</p>
 		<h2>三、哈儿实验室的领导人</h2>
@@ -82,10 +82,11 @@ header-img: "img/home-bg-o.jpg"
 			<p><strong>表1-2 哈儿实验室领导人列表</strong></p>
 			<table border="1" style="text-align: center;">
 				<tr><th>届数</th><th>时间</th><th>哈儿实验室苏维埃主席</th><th>哈儿实验室苏维埃副主席</th></tr>
-				<tr><td>1</td><td>2018年3月18日——2021年3月16日</td><td>OpenG-qkmb</td><td>G-094（2018年3月20日上任）</td></tr>
+				<tr><td>1</td><td>2018年3月18日——2021年3月16日</td><td>OpenG-qkmb</td><td>G-094（2018/3/20上任）</td></tr>
 				<tr><td>2</td><td>2021年3月16日——2021年7月4日</td><td>G-094</td><td>K-526-406Y</td></tr>
 				<tr><td>3</td><td>2021年7月4日——2021年8月1日</td><td>K-526-406Y</td><td>A-8139-21B</td></tr>
-				<tr><td>4</td><td>2021年8月1日——今</td><td>A-8139-21B</td><td>S-2231-63D(2021/8/1-2021/10/10)&nbsp;&nbsp;G-6054-18K(2021/10/10-今)</td></tr>
+				<tr><td>4</td><td>2021年8月1日——2021年10月31日</td><td>A-8139-21B</td><td>S-2231-63D(2021/8/1-2021/10/10)&nbsp;&nbsp;G-6054-18K(2021/10/10-2021/10/31)</td></tr>
+				<tr><td>5</td><td>2021年11月1日——今</td><td>OpenG-qkmb</td><td>G-6054-18K</td></tr>
 			</table>
 			<h3>2.哈儿实验室苏维埃</h3>
 			<p>
@@ -96,10 +97,10 @@ header-img: "img/home-bg-o.jpg"
 		<p>
 			&nbsp;&nbsp;&nbsp;&nbsp;在哈儿共产党据马克思列宁主义的领导下，协助哈儿国及全体哈儿国人民，走向共产主义的最终胜利。
 		</p>
-		以上是对哈儿实验室的简略介绍。如果希望加入我们，请咨询哈儿实验室外事活动部（Haer Labotiy Opnedeka Eruna Foreton，可缩写为OEF）。<br>
+		以上是对哈儿实验室的简略介绍。如果希望与我们共同为共产主义的胜利而奋斗，请咨询哈儿实验室外事活动部（Haer Labotiy Opnedeka Eruna Foreton, OEF）。<br>
 		<strong style="color: #FF0000;">全世界无产者，联合起来！</strong><br>
 		<div style="text-align: right">
-			哈儿实验室苏维埃主席<br>哈儿共产党中央委员会总书记<br>哈儿工人红军战时司令委员会主席<br>A-8139-21B<br>2021年9月20日
+			哈儿实验室苏维埃主席<br>哈儿共产党中央委员会总书记<br>哈儿工人红军战时司令委员会主席<br>OpenG-qkmb<br>2021年11月1日
 		</div>
 	</p>
 <!--一→h2；1→h3；①→h4-->
