--- a/access/index.html
+++ b/access/index.html
@@ -35,7 +35,7 @@
 <li><strong>年龄 Lev: </strong>&nbsp;<span id="age">[Age]</span></li>
 <br>
 <br>
-<li><strong>哈儿综合能力等级 Haer Isedsa Ruzaŭa Gangsk: </strong>&nbsp;<span style="" id="dg">[DG]</span></li>
+<li><strong>哈儿综合能力等级 Haer Isedsa Ruzaŭa Gangsk: </strong>&nbsp;<a href="https://hssrgov.github.io/about/#hirg" target="_blank" id="dg">[DG]</a></li>
 <!--A+: #990000 A: #FF0000 B: #FFFF00 C : #00FFFF D: #00FF00-->
 <br>
 <br>
