--- a/access/index.html
+++ b/access/index.html
@@ -16,12 +16,13 @@
 </head>
 <body style="background: #000000">
 <div style="color: #FFFFFF; text-align:center" width="100%">
-<a href="https://hssrgov.github.io/" style="color: #FFFFFF">主页<br>Fekke</a>
+<a href="https://hssrgov.github.io/" style="color: #FFFFFF" target="_blank">主页<br>Fekke</a>
 <hr><br>
 <h1>哈儿实验室危险哈儿数据库<br>Haer Labotiy Uzasni Haer Datv</h1>
 <input type="text" id="sid" placeholder="请输入危险哈儿号码 Vid igz uzasni haer genum...">&nbsp;<button OnClick="s()">搜索 Yefid</button>
 <br><br>
-当前可用编号 Lis Ruz Genum: <span style="color: #AAFFAA;" id="haernum"></span>
+当前可用编号 Lis Ruz Genum: <span style="color: #AAFFAA;" id="haernum"></span><br><br>
+<a href="list.html" style="color: #FFFFFF" target="_blank">索引&nbsp;Yevarovavedarovagʔ</a>
 <br><br><hr>
 <span id="main">
 <h1 id="t1">[HName]</h1>
@@ -29,7 +30,7 @@
 <br>
 <p>
 <dl>
-<li><strong>姓名 Imya: </strong>&nbsp;<span id="t2">[HName]</span></li>
+<li><strong>名称 Imya: </strong>&nbsp;<span id="t2">[HName]</span></li>
 <br>
 <br>
 <li><strong>年龄 Lev: </strong>&nbsp;<span id="age">[Age]</span></li>
