--- a/khl/index.html
+++ b/khl/index.html
@@ -6,7 +6,7 @@
 <title>西里尔哈儿语转换页面</title>
 </head>
 <body style="background: #000000;">
-	<div style="text-align: center; color: #FFFFFF; font-size: 20px">
+	<div style="text-align: center; color: #FFFFFF; font-size: 20px; font-family: 楷体;">
 		<a href="https://hssrgov.github.io/" target="_blank"><img src="emblem.png" alt="哈儿实验室徽章" title="哈儿实验室徽章" width="5%"></a>
 		<h1>西里尔哈儿语与拉丁哈儿语互转页面</h1><hr>
 		<p>请输入拉丁哈儿语以便转换为西里尔哈儿语或西里尔哈儿语以便转换为拉丁哈儿语。</p>
@@ -175,8 +175,8 @@
 				document.getElementById("result").innerHTML="转换后的哈儿语将会显示在这里……";
 			}
 		</script>
-		<textarea id="latin_h" placeholder="请输入" style="margin: 2px; width: 50%; height: 256px;"></textarea><br><button onClick="tr()">转换为西里尔哈儿语</button>&nbsp;&nbsp;<button onClick="rt()">转换为拉丁哈儿语</button>&nbsp;&nbsp;<button onClick="cl()">清除</button>
-		<p><div id="result" style="background: #AAAAAA;">转换后的哈儿语将会显示在这里……</div></p>
+		<textarea id="latin_h" placeholder="请输入" style="margin: 2px; width: 50%; height: 256px; font-family: 楷体;"></textarea><br><button onClick="tr()">转换为西里尔哈儿语</button>&nbsp;&nbsp;<button onClick="rt()">转换为拉丁哈儿语</button>&nbsp;&nbsp;<button onClick="cl()">清除</button>
+		<p><div id="result" style="background: #AAAAAA; font-family: 楷体;">转换后的哈儿语将会显示在这里……</div></p>
 		<hr>
 		<p>&copy;哈儿实验室 保留所有权利。</p>
 	</div>
