--- a/access/index.html
+++ b/access/index.html
@@ -15,14 +15,15 @@
 </script>
 </head>
 <body style="background: #000000">
-<div style="color: #FFFFFF; text-align:center" width="100%">
+<div style="color: #FFFFFF; text-align: center; font-family: 楷体;" width="100%">
 <a href="https://hssrgov.github.io/" style="color: #FFFFFF" target="_blank">主页<br>Fekke</a>
 <hr><br>
 <h1>哈儿实验室危险哈儿数据库<br>Haer Labotiy Uzasni Haer Datv</h1>
 <input type="text" id="sid" placeholder="请输入危险哈儿号码 Vid igz uzasni haer genum...">&nbsp;<button OnClick="s()">搜索 Yefid</button>
 <br><br>
 当前可用编号 Lis Ruz Genum: <span style="color: #AAFFAA;" id="haernum"></span><br><br>
-<a href="list.html" style="color: #FFFFFF" target="_blank">索引&nbsp;Yevarovavedarovagʔ</a>
+<a href="list.html" style="color: #FFFFFF" target="_blank">索引&nbsp;Yevarovavedarovagʔ</a><br><br>
+<button onClick="nextbutton(0)">前一个</button>&nbsp;&nbsp;&nbsp;<button onClick="nextbutton(1)">后一个</button>
 <br><br><hr>
 <span id="main">
 <h1 id="t1">[HName]</h1>
@@ -57,5 +58,6 @@
 <p>&copy;哈儿实验室 保留所有权利。<br>&copy;Haer Labotiy&nbsp;&nbsp;Vebet alak poumon.</p>
 </div>
 <script src="show.js"></script>
+<script>run();</script>
 </body>
 </html>
