全部采用哈儿语（西里尔哈儿语Ⅵ）
rt

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "此页面不存在。 Tet vebat neh veda."
+description: "此页面不存在。 Тет вебат нех веда."
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
@@ -12,7 +12,7 @@ permalink: /404.html
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 				<div class="site-heading" id="tag-heading">
-					<h1>404 Not Found.<br>404 Neh Neŭilav Yefid.</h1>
+					<h1>404 Нех Неуилав Эфид.</h1>
 					<span class="subheading">{{ page.description }}</span>
 				</div>
 			</div>
