--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ header-img: "img/home-bg-o.jpg"
 		<h2>一、什么是哈儿实验室？</h2>
 		<p>
 			&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室是哈儿苏维埃社会主义共和国最重要的非政治性组织，是哈儿苏维埃社会主义共和国的根本性组织。其设立目的是对哈儿进行生物学研究。<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室在全国所有行政区的政府部门设立哈儿实验室分部（或称分所）。哈儿实验室另包括在全国的10个特殊分部，00-09作为其名称。<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室在全国所有行政区的政府部门设立哈儿实验室分部（或称分所）。哈儿实验室另包括在世界的10个特殊分部，00-09作为其名称。<br>
 			&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室永远以“让正常人成为哈儿，让哈儿快乐生活”的基本指导方针和马克思列宁主义的根本方针，为建成真正的共产主义国家而贡献出力量。<br>
 			&nbsp;&nbsp;&nbsp;&nbsp;我们是由一些有牺牲精神的共产主义者组成的，我们永远应当对得起祖国鲜红旗帜背后的烈士们。
 		</p>
@@ -24,16 +24,16 @@ header-img: "img/home-bg-o.jpg"
 		<p>
 		<h4>①哈儿是什么？</h4>
 		<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;哈儿，在哈儿语中是“haer”，意为“智慧的愚者”。<strong>哈儿来源于人类，但超越了人类。</strong>哈儿是否是生物有待确认，因为它们没有应激性。它们有不同的性质，其中一些也许很可怕，我们也会对其进行活体实验（<strong>但决不伤害它们</strong>）以研究它们的性质。不要害怕：<strong>它们曾经也是人类</strong>，或许你曾经在街上与曾经的他们擦肩而过，但你也很快会成为哈儿的一员的。
+			&nbsp;&nbsp;&nbsp;&nbsp;哈儿，在哈儿语中是“Хаер”，意为“智慧的愚者”。<strong>哈儿来源于人类，但超越了人类。</strong>哈儿是否是生物有待确认，因为它们没有应激性。它们有不同的性质，其中一些也许很可怕，我们也会对其进行活体实验（<strong>但决不伤害它们</strong>）以研究它们的性质。不要害怕：<strong>它们曾经也是人类</strong>，或许你曾经在街上与曾经的他们擦肩而过，但你也很快会成为哈儿的一员的。
 		</p>
 		<h4>②哈儿的分类</h4>
 		<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;我们通常按<strong>哈儿通用综合能力评定</strong>来测试它们以便正确对它们进行分类。得到的结果为一个有理数（通常为整数），被称作<strong>哈儿综合能力值</strong>（俗称“哈儿智商”，<strong>以下简称“HIRG”</strong>），一般在-200至110之间。正常人的评定也是允许的。一般情况下，正常人的HIRG约在80至110之间。<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;通常，哈儿的HIRG在[-200,50]以内，若不在此区间内则该哈儿<strong>将被销毁</strong>，因为它们<strong>已失去用途或太过危险</strong>。<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;下面是哈儿等级与之对应的HIRG：<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;<strong id="hirg">表1-1 哈儿HIRG评级表</strong>
+			&nbsp;&nbsp;&nbsp;&nbsp;我们通常按<strong>哈儿通用综合能力评定</strong>来测试它们以便正确对它们进行分类。得到的结果为一个有理数（通常为整数），被称作<strong>哈儿综合能力值</strong>（俗称“哈儿智商”，<strong>以下简称“ХИРГ”</strong>），一般在-200至110之间。正常人的评定也是允许的。一般情况下，正常人的ХИРГ约在80至110之间。<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;通常，哈儿的ХИРГ在[-200,50]以内，若不在此区间内则该哈儿<strong>将被销毁</strong>，因为它们<strong>已失去用途或太过危险</strong>。<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;下面是哈儿等级与之对应的ХИРГ：<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;<strong id="ХИРГ">表1-1 哈儿ХИРГ评级表</strong>
 			<table border="1">
-				<tr><th>哈儿HIRG区间</th><th>哈儿等级分类</th></tr>
+				<tr><th>哈儿ХИРГ区间</th><th>哈儿等级分类</th></tr>
 				<tr><td>(20,50]</td><td>类人型哈儿</td></tr>
 				<tr><td>(0,20]</td><td>高智商哈儿</td></tr>
 				<tr><td>(-50,0]</td><td>中智商哈儿</td></tr>
@@ -97,7 +97,7 @@ header-img: "img/home-bg-o.jpg"
 		<p>
 			&nbsp;&nbsp;&nbsp;&nbsp;在哈儿共产党据马克思列宁主义的领导下，协助哈儿国及全体哈儿国人民，走向共产主义的最终胜利。
 		</p>
-		以上是对哈儿实验室的简略介绍。如果希望与我们共同为共产主义的胜利而奋斗，请咨询哈儿实验室外事活动部（Haer Labotiy Opnedeka Eruna Foreton, OEF）。<br>
+		以上是对哈儿实验室的简略介绍。如果希望与我们共同为共产主义的胜利而奋斗，请咨询哈儿实验室外事活动部（Хаер Лаботий Опнедека Ерюна Форетон, ОЕФ）。<br>
 		<strong style="color: #FF0000;">全世界无产者，联合起来！</strong><br>
 		<div style="text-align: right">
 			哈儿实验室苏维埃主席<br>哈儿共产党中央委员会总书记<br>哈儿工人红军战时司令委员会主席<br>OpenG-qkmb<br>2021年11月1日
