--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
-title: 文章 - Tekst
+title: 文章 - Текст
 layout: page
-description: "Alak mir proletar, soz!"
+description: "Алак мир пролетар, соз!"
 header-img: "img/home-bg-o.jpg"
 ---
 
