--- a/offline.html
+++ b/offline.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "网络错误。 Interet frek."
+description: "网络错误。 Интерет фрек."
 header-img: "img/404-bg.jpg"
 permalink: /offline.html
 ---
