--- a/access/index.html
+++ b/access/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title id="title">[HName] - 哈儿实验室危险哈儿数据库 HLUHD</title>
+<title id="title">[HName] - 哈儿实验室危险哈儿数据库 ХЛЮХД</title>
 <link Rel="SHORTCUT ICON" href="32.ico">
 <script>
 	function s()
@@ -15,14 +15,14 @@
 </script>
 </head>
 <body style="background: #000000">
-<div style="color: #FFFFFF; text-align: center; font-family: 楷体;" width="100%">
-<a href="https://hssrgov.github.io/" style="color: #FFFFFF" target="_blank">主页<br>Fekke</a>
+<div style="color: #FFFFFF; text-align: center; font-family: 华文楷体;" width="100%">
+<a href="https://hssrgov.github.io/" style="color: #FFFFFF" target="_blank">主页<br>Фекке</a>
 <hr><br>
-<h1>哈儿实验室危险哈儿数据库<br>Haer Labotiy Uzasni Haer Datv</h1>
-<input type="text" id="sid" placeholder="请输入危险哈儿号码 Vid igz uzasni haer genum...">&nbsp;<button OnClick="s()">搜索 Yefid</button>
+<h1>哈儿实验室危险哈儿数据库<br>Хаер Лаботий Юзасни Хаер Датв</h1>
+<input type="text" id="sid" placeholder="请输入危险哈儿号码 Вид игз юзасни хаер генюм...">&nbsp;<button OnClick="s()">搜索 Эфид</button>
 <br><br>
-当前可用编号 Lis Ruz Genum: <span style="color: #AAFFAA;" id="haernum"></span><br><br>
-<a href="list.html" style="color: #FFFFFF" target="_blank">索引&nbsp;Yevarovavedarovagʔ</a><br><br>
+当前可用编号 Лис Рюз Генюм: <span style="color: #AAFFAA;" id="haernum"></span><br><br>
+<a href="list.html" style="color: #FFFFFF" target="_blank">索引&nbsp;Эвароваведаровагь</a><br><br>
 <button onClick="nextbutton(0)">前一个</button>&nbsp;&nbsp;&nbsp;<button onClick="nextbutton(1)">后一个</button>
 <br><br><hr>
 <span id="main">
@@ -31,23 +31,23 @@
 <br>
 <p>
 <dl>
-<li><strong>名称 Imya: </strong>&nbsp;<span id="t2">[HName]</span></li>
+<li><strong>名称 Имя: </strong>&nbsp;<span id="t2">[HName]</span></li>
 <br>
 <br>
-<li><strong>年龄 Lev: </strong>&nbsp;<span id="age">[Age]</span></li>
+<li><strong>年龄 Лев: </strong>&nbsp;<span id="age">[Age]</span></li>
 <br>
 <br>
-<li><strong>哈儿综合能力等级 Haer Isedsa Ruzaŭa Gangsk: </strong>&nbsp;<a href="https://hssrgov.github.io/about/#hirg" target="_blank" id="dg">[DG]</a></li>
+<li><strong>哈儿综合能力等级 Хаер Иседса Рюзауа Гангск: </strong>&nbsp;<a href="https://hssrgov.github.io/about/#hirg" target="_blank" id="dg">[DG]</a></li>
 <!--A+: #990000 A: #FF0000 B: #FFFF00 C : #00FFFF D: #00FF00-->
 <br>
 <br>
-<li><strong>负责人 Haerona: </strong>&nbsp;<span id="haerona">[Haerona]</span></li>
+<li><strong>负责人 Хаерона: </strong>&nbsp;<span id="haerona">[Haerona]</span></li>
 <br>
 <br>
-<li><strong>危险哈儿号码 Uzasni Haer Genum: </strong>&nbsp;<span id="id1">[Number]</span></li>
+<li><strong>危险哈儿号码 Юзасни Хаер Генюм: </strong>&nbsp;<span id="id1">[Number]</span></li>
 <br>
 <br>
-<li><strong>信息 Ihf: </strong>
+<li><strong>信息 Ихф: </strong>
 <br>
 <span id="info">[Info]</span></li>
 </dl>
@@ -55,7 +55,7 @@
 <img id="img" src="haer-img\\[Number].jpg" alt="[Number]" title="[HName] - [Number]" width="75%"></p>
 </span>
 <hr>
-<p>&copy;哈儿实验室 保留所有权利。<br>&copy;Haer Labotiy&nbsp;&nbsp;Vebet alak poumon.</p>
+<p id="about_index"></p>
 </div>
 <script src="show.js"></script>
 <script>run();</script>
