--- a/access/list.html
+++ b/access/list.html
@@ -2,19 +2,19 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>索引 - 哈儿实验室危险哈儿数据库 HLUHD</title>
+<title>索引 - 哈儿实验室危险哈儿数据库 ХЛЮХД</title>
 <link Rel="SHORTCUT ICON" href="32.ico">
 </head>
 <body style="background: #000000;">
-<div style="text-align: center; color: #FFFFFF; font-family: 楷体;">
-<a href="index.html" style="color: #FFFFFF" target="_blank">哈儿实验室危险哈儿数据库<br>HLUHD</a><hr>
+<div style="text-align: center; color: #FFFFFF; font-family: 华文楷体;">
+<a href="index.html" style="color: #FFFFFF" target="_blank">哈儿实验室危险哈儿数据库<br>ХЛЮХД</a><hr>
 <h1>危险哈儿索引（与危险哈儿号码对应）</h1>
 <div style="text-align: center; color: #FFFFFF;">
 <table border="1" align="center" id="table">
 </table>
 </div>
 <hr>
-<p>&copy;哈儿实验室 保留所有权利。</p>
+<p id="about_index"></p>
 <script src="show.js"></script>
 <script>runtable();</script>
 </div>
