--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "关于 - Abet"
-description: "Alak mir proletar, soz!"
+title: "关于 - Абет"
+description: "Алак мир пролетар, соз!"
 header-img: "img/home-bg-o.jpg"
 ---
 
