--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
-title: 标签 - Ŭetiked
+title: 标签 - Уетикед
 layout: default
-description: "Alak mir proletar, soz!"
+description: "Алак мир пролетар, соз!"
 header-img: "img/home-bg-o.jpg"
 ---
 
