--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ header-img: "img/home-bg-o.jpg"
 			&nbsp;&nbsp;&nbsp;&nbsp;我们通常按<strong>哈儿通用综合能力评定</strong>来测试它们以便正确对它们进行分类。得到的结果为一个有理数（通常为整数），被称作<strong>哈儿综合能力值</strong>（俗称“哈儿智商”，<strong>以下简称“ХИРГ”</strong>），一般在-200至110之间。正常人的评定也是允许的。一般情况下，正常人的ХИРГ约在80至110之间。<br>
 			&nbsp;&nbsp;&nbsp;&nbsp;通常，哈儿的ХИРГ在[-200,50]以内，若不在此区间内则该哈儿<strong>将被销毁</strong>，因为它们<strong>已失去用途或太过危险</strong>。<br>
 			&nbsp;&nbsp;&nbsp;&nbsp;下面是哈儿等级与之对应的ХИРГ：<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;<strong id="ХИРГ">表1-1 哈儿ХИРГ评级表</strong>
+			&nbsp;&nbsp;&nbsp;&nbsp;<strong id="hirg">表1-1 哈儿ХИРГ评级表</strong>
 			<table border="1">
 				<tr><th>哈儿ХИРГ区间</th><th>哈儿等级分类</th></tr>
 				<tr><td>(20,50]</td><td>类人型哈儿</td></tr>
