添加一条消息
rt

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@ header-img: "img/home-bg-o.jpg"
 			</table>
 			<h3>2.哈儿实验室苏维埃</h3>
 			<p>
-				&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室苏维埃直接领导哈儿实验室总部的一切事务及各一级分部（分所）的基本事务。哈儿实验室苏维埃包括：主席1人；副主席1人；主席行政团5-7人；实验室总部代表20人；实验室各一级分部代表各25人。共计702-704人。哈儿实验室苏维埃以及哈儿实验室各级分部（分所）苏维埃在必要情况下均可向下越级指示。哈儿实验室各分部（分所）苏维埃包括：主席1人；副主席1人；主席协助团5-7人；该级分部（分所）代表15人；其下一级分部（分所）代表各20人（若无下一级则不设）。
+				&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室苏维埃直接领导哈儿实验室总部的一切事务及各一级分部（分所）的基本事务。哈儿实验室苏维埃包括：主席1人；副主席1人；主席行政团另有20-22人；实验室总部代表20人；实验室各一级分部代表各25人。共计717-719人。哈儿实验室苏维埃以及哈儿实验室各级分部（分所）苏维埃在必要情况下均可向下越级指示。哈儿实验室各分部（分所）苏维埃包括：主席1人；副主席1人；主席执行团另有5-7人；该级分部（分所）代表15人；其下一级分部（分所）代表各20人（若无下一级则不设）。
 			</p>
 		</p>
 		<h2>四、发展目标</h2>
