--- a/about.html
+++ b/about.html
@@ -83,10 +83,11 @@ header-img: "img/home-bg-o.jpg"
 			<table border="1" style="text-align: center;">
 				<tr><th>届数</th><th>时间</th><th>哈儿实验室苏维埃主席</th><th>哈儿实验室苏维埃副主席</th></tr>
 				<tr><td>1</td><td>2018年3月18日——2021年3月16日</td><td>OpenG-qkmb</td><td>G-094（2018/3/20上任）</td></tr>
-				<tr><td>2</td><td>2021年3月16日——2021年7月4日</td><td>G-094</td><td>K-526-406Y</td></tr>
-				<tr><td>3</td><td>2021年7月4日——2021年8月1日</td><td>K-526-406Y</td><td>A-8139-21B</td></tr>
-				<tr><td>4</td><td>2021年8月1日——2021年10月31日</td><td>A-8139-21B</td><td>S-2231-63D(2021/8/1-2021/10/10)&nbsp;&nbsp;G-6054-18K(2021/10/10-2021/10/31)</td></tr>
-				<tr><td>5</td><td>2021年11月1日——今</td><td>OpenG-qkmb</td><td>G-6054-18K</td></tr>
+				<tr><td>2-1</td><td>2021年3月17日——2021年7月4日</td><td>G-094</td><td>K-526-406Y</td></tr>
+				<tr><td>2-2</td><td>2021年7月5日——2021年7月31日</td><td>K-526-406Y</td><td>A-8139-21B</td></tr>
+				<tr><td>2-3</td><td>2021年8月1日——2021年10月9日</td><td>A-8139-21B</td><td>S-2231-63D</td></tr>
+				<tr><td>2-4</td><td>2021年10月10日——2021年10月31日</td><td>A-8139-21B</td><td>G-6054-18K</td></tr>
+				<tr><td>2-5</td><td>2021年11月1日——今</td><td>OpenG-qkmb</td><td>G-6054-18K</td></tr>
 			</table>
 			<h3>2.哈儿实验室苏维埃</h3>
 			<p>
