--- a/about.html
+++ b/about.html
@@ -58,8 +58,8 @@ header-img: "img/home-bg-o.jpg"
 		<p>
 			<h4>①实验人员</h4>
 			<p>
-				&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室的工作人员都有自己的编号，即随机生成的一串字符，通常格式为“[大写字母A-Z]-[四位整数，不足补0]-[两位整数，不足补0][大写字母A-Z]”，例如：A-8139-21B、S-2231-63D（在早期实验室有一些不规范名称和特殊名称，如：K-526-406Y、G-094等）。<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;通常不用人名称呼，为了避免重名并保护哈儿实验室人员。<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室的工作人员都有自己的编号，即随机生成的一串字符，通常格式为“[大写字母A-Z]-[四位整数，不足补0]-[两位整数，不足补0][大写字母A-Z]”，例如：А-8139-21Б、С-2231-63Д（在早期实验室有一些不规范名称和特殊名称，如：К-526-406Й、Г-094等）。<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;通常用粗体西里尔字母编号+全名称呼，为了避免重名及混淆。<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;实验人员通常是素质良好的哈儿共产党员。
 			</p>
 			<h4>②实验过程</h4>
@@ -79,16 +79,16 @@ header-img: "img/home-bg-o.jpg"
 		<h2>三、哈儿实验室的领导人</h2>
 		<p>
 			<h3>1.领导人列表</h3>
-			<p><strong>表1-2 哈儿实验室领导人列表</strong></p>
+			<p><strong>表1-2 哈儿实验室领导人列表（仅编号）</strong></p>
 			<table border="1" style="text-align: center;">
 				<tr><th>届数</th><th>时间</th><th>哈儿实验室苏维埃主席</th><th>哈儿实验室苏维埃副主席</th></tr>
-				<tr><td>1</td><td>2018年3月18日——2021年3月16日</td><td>OpenG-qkmb</td><td>G-094（2018/3/20上任）</td></tr>
-				<tr><td>2-1</td><td>2021年3月17日——2021年7月4日</td><td>G-094</td><td>K-526-406Y</td></tr>
-				<tr><td>2-2</td><td>2021年7月5日——2021年7月31日</td><td>K-526-406Y</td><td>A-8139-21B</td></tr>
-				<tr><td>2-3</td><td>2021年8月1日——2021年10月9日</td><td>A-8139-21B</td><td>S-2231-63D</td></tr>
-				<tr><td>2-4</td><td>2021年10月10日——2021年10月31日</td><td>A-8139-21B</td><td>G-6054-18K</td></tr>
-				<tr><td>2-5</td><td>2021年11月1日——2021年2月14日</td><td>OpenG-qkmb</td><td>G-6054-18K</td></tr>
-				<tr><td>3</td><td>2021年2月15日——今</td><td>OpenG-qkmb</td><td>G-6054-18K</td></tr>
+				<tr><td>1</td><td>2018年3月18日——2021年3月16日</td><td>ОпенГ-ккмб</td><td>ОпенГ-ккмб（2018/3/20上任）</td></tr>
+				<tr><td>2-1</td><td>2021年3月17日——2021年7月4日</td><td>Г-094</td><td>К-526-406Й</td></tr>
+				<tr><td>2-2</td><td>2021年7月5日——2021年7月31日</td><td>К-526-406Й</td><td>А-8139-21Б</td></tr>
+				<tr><td>2-3</td><td>2021年8月1日——2021年10月9日</td><td>А-8139-21Б</td><td>С-2231-63Д</td></tr>
+				<tr><td>2-4</td><td>2021年10月10日——2021年10月31日</td><td>А-8139-21Б</td><td>Г-6054-18К</td></tr>
+				<tr><td>2-5</td><td>2021年11月1日——2021年2月14日</td><td>ОпенГ-ккмб</td><td>Г-6054-18К</td></tr>
+				<tr><td>3</td><td>2021年2月15日——今</td><td>ОпенГ-ккмб</td><td>Г-6054-18К</td></tr>
 			</table>
 			<h3>2.哈儿实验室苏维埃</h3>
 			<p>
@@ -102,7 +102,7 @@ header-img: "img/home-bg-o.jpg"
 		以上是对哈儿实验室的简略介绍。如果希望与我们共同为共产主义的胜利而奋斗，请咨询哈儿实验室外事活动部（Хаер Лаботий Опнедека Ерюна Форетон, ОЕФ）。<br>
 		<strong style="color: #FF0000;">全世界无产者，联合起来！</strong><br>
 		<div style="text-align: right">
-			哈儿实验室苏维埃主席<br>哈儿共产党中央委员会总书记<br>哈儿工人红军战时司令委员会主席<br>OpenG-qkmb<br>2021年11月1日
+			哈儿实验室苏维埃主席<br>哈儿共产党中央委员会总书记<br>哈儿工人红军战时司令委员会主席<br>ОпенГ-ккмб<br>2021年11月1日
 		</div>
 	</p>
 <!--一→h2；1→h3；①→h4-->
