--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@ header-img: "img/home-bg-o.jpg"
 		<p>
 			<h4>①实验人员</h4>
 			<p>
-				&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室的工作人员都有自己的编号，即随机生成的一串字符，通常格式为“[大写字母A-Z]-[四位整数，不足补0]-[两位整数，不足补0][大写字母A-Z]”，例如：А-8139-21Б、С-2231-63Д（在早期实验室有一些不规范名称和特殊名称，如：К-526-406Й、Г-094等）。<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室的工作人员都有自己的编号，即随机生成的一串字符，通常格式为“[大写字母А-Я]-[四位整数，不足补0]-[两位整数，不足补0][大写字母А-Я]”，例如：А-8139-21Б、С-2231-63Д（在早期实验室有一些不规范名称和特殊名称，如：К-526-406Й、Г-094等）。<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;通常用粗体西里尔字母编号+全名称呼，为了避免重名及混淆。<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;实验人员通常是素质良好的哈儿共产党员。
 			</p>
