--- a/about.html
+++ b/about.html
@@ -26,12 +26,12 @@ header-img: "img/home-bg-o.jpg"
 		<p>
 			&nbsp;&nbsp;&nbsp;&nbsp;哈儿，在哈儿语中是“Хаер”，意为“智慧的愚者”。<strong>哈儿来源于人类，但超越了人类。</strong>哈儿是否是生物有待确认，因为它们没有应激性。它们有不同的性质，其中一些也许很可怕，我们也会对其进行活体实验（<strong>但决不伤害它们</strong>）以研究它们的性质。不要害怕：<strong>它们曾经也是人类</strong>，或许你曾经在街上与曾经的他们擦肩而过，但你也很快会成为哈儿的一员的。
 		</p>
-		<h4>②哈儿的分类</h4>
+		<h4 id="hirg">②哈儿的分类</h4>
 		<p>
 			&nbsp;&nbsp;&nbsp;&nbsp;我们通常按<strong>哈儿通用综合能力评定</strong>来测试它们以便正确对它们进行分类。得到的结果为一个有理数（通常为整数），被称作<strong>哈儿综合能力值</strong>（俗称“哈儿智商”，<strong>以下简称“ХИРГ”</strong>），一般在-200至110之间。正常人的评定也是允许的。一般情况下，正常人的ХИРГ约在80至110之间。<br>
 			&nbsp;&nbsp;&nbsp;&nbsp;通常，哈儿的ХИРГ在[-200,50]以内，若不在此区间内则该哈儿<strong>将被销毁</strong>，因为它们<strong>已失去用途或太过危险</strong>。<br>
 			&nbsp;&nbsp;&nbsp;&nbsp;下面是哈儿等级与之对应的ХИРГ：<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;<strong id="hirg">表1-1 哈儿ХИРГ评级表</strong>
+			&nbsp;&nbsp;&nbsp;&nbsp;<strong>表1-1 哈儿ХИРГ评级表</strong>
 			<table border="1">
 				<tr><th>哈儿ХИРГ区间</th><th>哈儿等级分类</th></tr>
 				<tr><td>(20,50]</td><td>类人型哈儿</td></tr>
@@ -82,7 +82,7 @@ header-img: "img/home-bg-o.jpg"
 			<p><strong>表1-2 哈儿实验室领导人列表（仅编号）</strong></p>
 			<table border="1" style="text-align: center;">
 				<tr><th>届数</th><th>时间</th><th>哈儿实验室苏维埃主席</th><th>哈儿实验室苏维埃副主席</th></tr>
-				<tr><td>1</td><td>2018年3月18日——2021年3月16日</td><td>ОпенГ-ккмб</td><td>ОпенГ-ккмб（2018/3/20上任）</td></tr>
+				<tr><td>1</td><td>2018年3月18日——2021年3月16日</td><td>ОпенГ-ккмб</td><td>Г-094（2018/3/20上任）</td></tr>
 				<tr><td>2-1</td><td>2021年3月17日——2021年7月4日</td><td>Г-094</td><td>К-526-406Й</td></tr>
 				<tr><td>2-2</td><td>2021年7月5日——2021年7月31日</td><td>К-526-406Й</td><td>А-8139-21Б</td></tr>
 				<tr><td>2-3</td><td>2021年8月1日——2021年10月9日</td><td>А-8139-21Б</td><td>С-2231-63Д</td></tr>
@@ -101,9 +101,6 @@ header-img: "img/home-bg-o.jpg"
 		</p>
 		以上是对哈儿实验室的简略介绍。如果希望与我们共同为共产主义的胜利而奋斗，请咨询哈儿实验室外事活动部（Хаер Лаботий Опнедека Ерюна Форетон, ОЕФ）。<br>
 		<strong style="color: #FF0000;">全世界无产者，联合起来！</strong><br>
-		<div style="text-align: right">
-			哈儿实验室苏维埃主席<br>哈儿共产党中央委员会总书记<br>哈儿工人红军战时司令委员会主席<br>ОпенГ-ккмб<br>2021年11月1日
-		</div>
 	</p>
 <!--一→h2；1→h3；①→h4-->
 </div>
