--- a/urna/public.html
+++ b/urna/public.html
@@ -13,25 +13,7 @@
 		<hr>
 		<p id="m" style="width: 100%; text-align: center;"></p>
 		<script language="javascript">
-			const njet="N";
-			var n=0,fn=njet,te=-1;
-			var xmlhttp=new XMLHttpRequest();
-			xmlhttp.open("GET","https://hssrgov.github.io/urna/nlib.xml",false);
-			xmlhttp.send();
-			var xmlDoc=xmlhttp.responseXML;
-			n=Number(xmlDoc.getElementsByTagName("n")[0].childNodes[0].nodeValue)-1;
-			fn=xmlDoc.getElementById(n+"_lf").childNodes[0].nodeValue;
-			te=xmlDoc.getElementById(n+"_l").childNodes[0].nodeValue;
-			if(fn!=njet)
-			{
-				document.getElementById("m").innerHTML="<button OnClick=\"jump()\">阅读有问题请点此转到PDF页面阅读</button><br><p><embed src=\""+fn+"\" style=\"width: 90%; height: 2000px;\"></p>";
-				document.getElementById("thisnumber").innerHTML=te;
-			}
-			function jump()
-			{
-				window.location.href=fn;
-				return;
-			}
+			window.location.href="pubfiles.html?ver=latest";
 		</script>
 		<hr>
 		<p>&copy;&nbsp;集体安全防卫组织 保留所有权利。</p>
