--- a/khl/index.html
+++ b/khl/index.html
@@ -25,6 +25,23 @@
 				document.getElementById("result").innerHTML="转换中，请不要进行任何操作……";
 				for(var i=0;i<len;++i)
 				{
+					latin=latin.replace("padomju","sovetju");
+					latin=latin.replace("Padomju","Sovetju");
+					latin=latin.replace("PADOMJU","SOVETJU");
+				}
+				for(var i=0;i<len;++i)
+				{
+					latin=latin.replace("PSR","SSR");
+					latin=latin.replace("PFSR","SFSR");
+				}
+				for(var i=0;i<len;++i)
+				{
+					latin=latin.replace("shtsh","щ");
+					latin=latin.replace("Shtsh","Щ");
+					latin=latin.replace("SHTSH","Щ");
+				}
+				for(var i=0;i<len;++i)
+				{
 					latin=latin.replace("shtsh","щ");
 					latin=latin.replace("Shtsh","Щ");
 					latin=latin.replace("SHTSH","Щ");
@@ -52,28 +69,66 @@
 					latin=latin.replace("sh","ш");
 					latin=latin.replace("Sh","Ш");
 					latin=latin.replace("SH","Ш");
-					latin=latin.replace("ye","э");
-					latin=latin.replace("Ye","Э");
-					latin=latin.replace("YE","Э");
+					latin=latin.replace("ye","е");
+					latin=latin.replace("Ye","Е");
+					latin=latin.replace("YE","Е");
 					latin=latin.replace("yo","ё");
 					latin=latin.replace("Yo","Ё");
 					latin=latin.replace("YO","Ё");
-					latin=latin.replace("ts","ц");
-					latin=latin.replace("Ts","Ц");
-					latin=latin.replace("TS","Ц");
 					latin=latin.replace("ya","я");
 					latin=latin.replace("Ya","Я");
 					latin=latin.replace("YA","Я");
+					latin=latin.replace("yu","ю");
+					latin=latin.replace("Yu","Ю");
+					latin=latin.replace("YU","Ю");
+					latin=latin.replace("je","е");
+					latin=latin.replace("Je","Е");
+					latin=latin.replace("JE","Е");
+					latin=latin.replace("jo","ё");
+					latin=latin.replace("Jo","Ё");
+					latin=latin.replace("JO","Ё");
+					latin=latin.replace("ja","я");
+					latin=latin.replace("Ja","Я");
+					latin=latin.replace("JA","Я");
+					latin=latin.replace("ju","ю");
+					latin=latin.replace("Ju","Ю");
+					latin=latin.replace("JU","Ю");
+					latin=latin.replace("yē","е");
+					latin=latin.replace("Yē","Е");
+					latin=latin.replace("YĒ","Е");
+					latin=latin.replace("yō","ё");
+					latin=latin.replace("Yō","Ё");
+					latin=latin.replace("YŌ","Ё");
+					latin=latin.replace("yā","я");
+					latin=latin.replace("Yā","Я");
+					latin=latin.replace("YĀ","Я");
+					latin=latin.replace("yū","ю");
+					latin=latin.replace("Yū","Ю");
+					latin=latin.replace("YŪ","Ю");
+					latin=latin.replace("jē","е");
+					latin=latin.replace("Jē","Е");
+					latin=latin.replace("JĒ","Е");
+					latin=latin.replace("jō","ё");
+					latin=latin.replace("Jō","Ё");
+					latin=latin.replace("JŌ","Ё");
+					latin=latin.replace("jā","я");
+					latin=latin.replace("Jā","Я");
+					latin=latin.replace("JĀ","Я");
+					latin=latin.replace("jū","ю");
+					latin=latin.replace("Jū","Ю");
+					latin=latin.replace("JŪ","Ю");
+					latin=latin.replace("ts","ц");
+					latin=latin.replace("Ts","Ц");
+					latin=latin.replace("TS","Ц");
 					latin=latin.replace("zh","ж");
 					latin=latin.replace("Zh","Ж");
 					latin=latin.replace("ZH","Ж");
-					latin=latin.replace("śʔ","ъ");
-					latin=latin.replace("Śʔ","Ъ");
-					latin=latin.replace("ʔś","ы");
-					latin=latin.replace("ʔŚ","Ы");
-					latin=latin.replace("kh","қ");
-					latin=latin.replace("Kh","Қ");
-					latin=latin.replace("KH","Қ");
+					latin=latin.replace("dz","ѕ");
+					latin=latin.replace("Dz","Ѕ");
+					latin=latin.replace("DZ","Ѕ");
+					latin=latin.replace("dž","џ");
+					latin=latin.replace("Dž","џ");
+					latin=latin.replace("DŽ","Џ");
 				}
 				for(var i=0;i<len;++i)
 				{
@@ -111,29 +166,46 @@
 					latin=latin.replace("s","с");
 					latin=latin.replace("T","Т");
 					latin=latin.replace("t","т");
-					latin=latin.replace("U","Ю");
-					latin=latin.replace("u","ю");
+					latin=latin.replace("U","У");
+					latin=latin.replace("u","у");
 					latin=latin.replace("V","В");
 					latin=latin.replace("v","в");
 					latin=latin.replace("Y","Й");
 					latin=latin.replace("y","й");
 					latin=latin.replace("Z","З");
 					latin=latin.replace("z","з");
-					latin=latin.replace("Ŭ","У");
-					latin=latin.replace("ŭ","у");
-					latin=latin.replace("Ś","Ң");
-					latin=latin.replace("ś","ң");
-					latin=latin.replace("ʔ","ь");
 					latin=latin.replace("C","К");
 					latin=latin.replace("c","к");
-					latin=latin.replace("J","Й");
-					latin=latin.replace("j","й");
+					latin=latin.replace("J","Ј");
+					latin=latin.replace("j","ј");
 					latin=latin.replace("Q","К");
 					latin=latin.replace("q","к");
-					latin=latin.replace("W","Ŷ");
-					latin=latin.replace("w","ŷ");
 					latin=latin.replace("X","Кс");
 					latin=latin.replace("x","кс");
+					latin=latin.replace("ā","а");
+					latin=latin.replace("Ā","А");
+					latin=latin.replace("ū","у");
+					latin=latin.replace("Ū","У");
+					latin=latin.replace("ē","э");
+					latin=latin.replace("Ē","Э");
+					latin=latin.replace("ī","и");
+					latin=latin.replace("Ī","И");
+					latin=latin.replace("ō","о");
+					latin=latin.replace("Ō","О");
+					latin=latin.replace("š","ш");
+					latin=latin.replace("Š","Ш");
+					latin=latin.replace("ž","ж");
+					latin=latin.replace("Ž","Ж");
+					latin=latin.replace("ļ","љ");
+					latin=latin.replace("Ļ","Љ");
+					latin=latin.replace("ģ","ѓ");
+					latin=latin.replace("Ģ","Ѓ");
+					latin=latin.replace("Č","Ч");
+					latin=latin.replace("č","ч");
+					latin=latin.replace("ķ","ӄ");
+					latin=latin.replace("Ķ","Ӄ");
+					latin=latin.replace("ņ","њ");
+					latin=latin.replace("Ņ","Њ");
 				}
 				len=latin.length;
 				latin=turner(latin,len);
