--- a/hluhd/index.html
+++ b/hluhd/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title id="title">[HName] - 哈儿实验室危险哈儿数据库 ХЛЮХД</title>
+<title id="title">[HName] - 哈儿实验室危险哈儿数据库 БДОХЛ</title>
 <link rel="SHORTCUT ICON" href="32.ico">
 <link rel="stylesheet" type="text/css" href="main.css">
 <script>
@@ -20,11 +20,11 @@
 <a href="https://hssrgov.github.io/" style="color: #FFFFFF" target="_blank">主页<br>Фекке</a>
 <hr><br>
 <div class="header">
-<h1>哈儿实验室危险哈儿数据库<br>Хаер Лаботий Юзасни Хаер Датв</h1>
-<input type="text" id="sid" placeholder="请输入危险哈儿号码 Вид игз юзасни хаер генюм...">&nbsp;<button OnClick="s()">搜索 Эфид</button>
+<h1>哈儿实验室危险哈儿数据库<br>База Данных Опасных Хаеры Лаборатории Хаера</h1>
+<input type="text" id="sid" placeholder="请输入危险哈儿号码">&nbsp;<button OnClick="s()">搜索</button>
 <br><br>
-当前可用编号 Лис Рюз Генюм: <span style="color: #AAFFAA;" id="haernum"></span><br><br>
-<a href="list.html" style="color: #FFFFFF" target="_blank">索引&nbsp;Эвароваведаровагь</a><br><br>
+当前可用编号: <span style="color: #AAFFAA;" id="haernum"></span><br><br>
+<a href="list.html" style="color: #FFFFFF" target="_blank">索引</a><br><br>
 <button onClick="nextbutton(0)">前一个</button>&nbsp;&nbsp;&nbsp;<button onClick="nextbutton(1)">后一个</button>
 </div>
 <br><br><hr>
@@ -33,17 +33,17 @@
 <dl class="sidebar">
 <img id="img" src="haer-img\\[Number].jpg" alt="[Number]" title="[HName] - [Number]" width="45%"><br>
 <h3 id="t2">[HName]</h3><h5 style="color: #7F7F7F" id="des">[Des]</h5>
-<li><strong>年龄 Лев: </strong>&nbsp;<span id="age">[Age]</span></li>
+<li><strong>年龄: </strong>&nbsp;<span id="age">[Age]</span></li>
 <br>
 <br>
-<li><strong>哈儿综合能力等级 Хаер Иседса Рюзауа Гангск: </strong>&nbsp;<a href="https://hssrgov.github.io/about/#hirg" target="_blank" id="dg">[DG]</a></li>
+<li><strong>哈儿综合能力等级: </strong>&nbsp;<a href="https://hssrgov.github.io/about/#hirg" target="_blank" id="dg">[DG]</a></li>
 <!--A+: #990000 A: #FF0000 B: #FFFF00 C : #00FFFF D: #00FF00-->
 <br>
 <br>
-<li><strong>负责人 Хаерона: </strong>&nbsp;<span id="haerona">[Haerona]</span></li>
+<li><strong>负责人: </strong>&nbsp;<span id="haerona">[Haerona]</span></li>
 <br>
 <br>
-<li><strong>危险哈儿号码 Юзасни Хаер Генюм: </strong>&nbsp;<span id="id1">[Number]</span></li>
+<li><strong>危险哈儿号码: </strong>&nbsp;<span id="id1">[Number]</span></li>
 </dl>
 <br><br><br>
 <div class="maincontent">
