--- a/hluhd/list.html
+++ b/hluhd/list.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>索引 - 哈儿实验室危险哈儿数据库 ХЛЮХД</title>
+<title>索引 - 哈儿实验室危险哈儿数据库 БДОХЛ</title>
 <link Rel="SHORTCUT ICON" href="32.ico">
 </head>
 <body style="background: #000000;">
 <div style="text-align: center; color: #FFFFFF; font-family: 华文楷体;">
-<a href="index.html" style="color: #FFFFFF" target="_blank">哈儿实验室危险哈儿数据库<br>ХЛЮХД</a><hr>
+<a href="index.html" style="color: #FFFFFF" target="_blank">哈儿实验室危险哈儿数据库<br>БДОХЛ</a><hr>
 <h1>危险哈儿索引（与危险哈儿号码对应）</h1>
 <div style="text-align: center; color: #FFFFFF;">
 <table border="1" align="center" id="table">
