--- a/hluhd/index.html
+++ b/hluhd/index.html
@@ -16,8 +16,8 @@
 </script>
 </head>
 <body style="background: #000000">
-<div style="color: #FFFFFF; text-align: center; font-family: 华文楷体;" width="100%">
-<a href="https://hssrgov.github.io/" style="color: #FFFFFF" target="_blank">主页<br>Фекке</a>
+<div style="color: #FFFFFF; text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, monospace;" width="100%">
+<a href="https://hssrgov.github.io/" style="color: #FFFFFF" target="_blank">主页</a>
 <hr><br>
 <div class="header">
 <h1>哈儿实验室危险哈儿数据库<br>База Данных Опасных Хаеры Лаборатории Хаера</h1>
