--- a/hluhd/list.html
+++ b/hluhd/list.html
@@ -6,7 +6,7 @@
 <link Rel="SHORTCUT ICON" href="32.ico">
 </head>
 <body style="background: #000000;">
-<div style="text-align: center; color: #FFFFFF; font-family: 华文楷体;">
+<div style="text-align: center; color: #FFFFFF; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, monospace;">
 <a href="index.html" style="color: #FFFFFF" target="_blank">哈儿实验室危险哈儿数据库<br>БДОХЛ</a><hr>
 <h1>危险哈儿索引（与危险哈儿号码对应）</h1>
 <div style="text-align: center; color: #FFFFFF;">
