--- a/hluhd/index.html
+++ b/hluhd/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title id="title">[HName] - 哈儿实验室危险哈儿数据库 БДОХЛ</title>
+<title id="title">[HName] - 哈儿实验室危险哈儿数据库 БДОХЛХ</title>
 <link rel="SHORTCUT ICON" href="32.ico">
 <link rel="stylesheet" type="text/css" href="main.css">
 <script>
