--- a/404.html
+++ b/404.html
@@ -1,24 +1,15 @@
 ---
 layout: default
-description: "此页面不存在。 Тет вебат нех веда."
+title: 页面不存在
+hide-in-nav: true
+description: "Страницы не существует."
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
 
 
 <!-- Page Header -->
-<header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-				<div class="site-heading" id="tag-heading">
-					<h1>404 Нех Неуилав Эфид.</h1>
-					<span class="subheading">{{ page.description }}</span>
-				</div>
-			</div>
-		</div>
-	</div>
-</header>
+{% include intro-header.html type="page" short='true' %}
 
 <script>
 	document.body.classList.add('page-fullscreen');
