--- a/about.html
+++ b/about.html
@@ -1,128 +1,47 @@
 ---
 layout: page
-title: "关于 - Абет"
-description: "Алак мир пролетар, соз!"
-header-img: "img/home-bg-o.jpg"
+title: "关于"
+description: "Пролетарии всех стран, соединяйтесь!"
+header-img: "img/about-bg.jpg"
+multilingual: true
 ---
 
-<div class="zh post-container">
+{% include multilingual-sel.html %}
 
-	<h1>关于哈儿实验室</h1>
-	<p>
-		来自世界的同志们：<br>
-		欢迎来到哈儿实验室。这里有一些关于我们的信息。<br>
-		<h2>一、什么是哈儿实验室？</h2>
-		<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室是哈儿苏维埃社会主义共和国最重要的非政治性组织，是哈儿苏维埃社会主义共和国的根本性组织。其设立目的是对哈儿进行生物学研究。<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室在全国所有行政区的政府部门设立哈儿实验室分部（或称分所）。哈儿实验室另包括在世界的10个特殊分部，00-09作为其名称。<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室永远以“让正常人成为哈儿，让哈儿快乐生活”的基本指导方针和马克思列宁主义的根本方针，为建成真正的共产主义国家而贡献出力量。<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;我们是由一些有牺牲精神的共产主义者组成的，我们永远应当对得起祖国鲜红旗帜背后的烈士们。
-		</p>
-		<h2>二、哈儿实验室的运作</h2>
-		<p>
-		<h3>1.哈儿</h3>
-		<p>
-		<h4>①哈儿是什么？</h4>
-		<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;哈儿，在哈儿语中是“Хаер”，意为“智慧的愚者”。<strong>哈儿来源于人类，但超越了人类。</strong>哈儿是否是生物有待确认，因为它们没有应激性。它们有不同的性质，其中一些也许很可怕，我们也会对其进行活体实验（<strong>但决不伤害它们</strong>）以研究它们的性质。不要害怕：<strong>它们曾经也是人类</strong>，或许你曾经在街上与曾经的他们擦肩而过，但你也很快会成为哈儿的一员的。
-		</p>
-		<h4 id="hirg">②哈儿的分类</h4>
-		<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;我们通常按<strong>哈儿通用综合能力评定</strong>来测试它们以便正确对它们进行分类。得到的结果为一个有理数（通常为整数），被称作<strong>哈儿综合能力值</strong>（俗称“哈儿智商”，<strong>以下简称“ХИРГ”</strong>），一般在-200至110之间。正常人的评定也是允许的。一般情况下，正常人的ХИРГ约在80至110之间。<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;通常，哈儿的ХИРГ在[-200,50]以内，若不在此区间内则该哈儿<strong>将被销毁</strong>，因为它们<strong>已失去用途或太过危险</strong>。<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;下面是哈儿等级与之对应的ХИРГ：<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;<strong>表1-1 哈儿ХИРГ评级表</strong>
-			<table border="1">
-				<tr><th>哈儿ХИРГ区间</th><th>哈儿等级分类</th></tr>
-				<tr><td>(20,50]</td><td>类人型哈儿</td></tr>
-				<tr><td>(0,20]</td><td>高智商哈儿</td></tr>
-				<tr><td>(-50,0]</td><td>中智商哈儿</td></tr>
-				<tr><td>(-100,-50]</td><td>低智商哈儿</td></tr>
-				<tr><td>[-200,-100]</td><td>化学物质型哈儿</td></tr>
-			</table>
-			&nbsp;&nbsp;&nbsp;&nbsp;我们平等地对待每一个哈儿，让它们不从事生产。
-		</p>
-		<h4>③如何成为哈儿？</h4>
-		<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;我们有许多成为哈儿的途径。我们在推荐一些途径的同时反对一些途径，尽管它们看上去很成功。<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;推荐的有：Ⅰ哈儿门（电击变哈，最安全）；Ⅱ高台坠落（撞击变哈，相当危险）；Ⅲ火箭（爆炸变哈，极度危险）。<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;反对的有：Ⅰ吸食毒品；Ⅱ吸食元素周期表；Ⅲ食用一些类型的蘑菇；Ⅳ炼钢过多。<br>
-			<strong style="color: #FF0000;">&nbsp;&nbsp;&nbsp;&nbsp;切勿使用我们反对的途径成为哈儿！</strong><br>
-		</p>
-		</p>
-		<h3>2.哈儿门</h3>
-		<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;哈儿门，即用电击使人变成哈儿的方法，最为稳妥。<br>
-		</p>
-		<h3>3.实验</h3>
-		<p>
-			<h4>①实验人员</h4>
-			<p>
-				&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室的工作人员都有自己的编号，即随机生成的一串字符，通常格式为“[大写字母А-Я]-[四位整数，不足补0]-[两位整数，不足补0][大写字母А-Я]”，例如：А-8139-21Б、С-2231-63Д（在早期实验室有一些不规范名称和特殊名称，如：К-526-406Й、Г-094等）。<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;通常用粗体西里尔字母编号+全名称呼，为了避免重名及混淆。<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;实验人员通常是素质良好的哈儿共产党员。
-			</p>
-			<h4>②实验过程</h4>
-			<p>
-				&nbsp;&nbsp;&nbsp;&nbsp;实验通常安全而舒适，不会伤害哈儿。少数极危险的实验或会折磨哈儿的实验会事先征得哈儿及其负责人的同意。
-			</p>
-			<h4>③结果发布</h4>
-			<p>
-				&nbsp;&nbsp;&nbsp;&nbsp;对于无须保密的结果，我们将发布在我们的网站上。
-			</p>
-		</p>
-		<h3>4.象征</h3>
-		<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室的旗帜、徽章、颂歌、格言以及其它象征由哈儿实验室苏维埃指定。哈儿工人红军为哈儿实验室所有。
-		</p>
-		</p>
-		<h2>三、哈儿实验室的领导人</h2>
-		<p>
-			<h3>1.领导人列表</h3>
-			<p><strong>表1-2 哈儿实验室领导人列表（仅编号）</strong></p>
-			<table border="1" style="text-align: center;">
-				<tr><th>届数</th><th>时间</th><th>哈儿实验室苏维埃主席</th><th>哈儿实验室苏维埃副主席</th></tr>
-				<tr><td>1</td><td>2018年3月18日——2021年3月16日</td><td>ОпенГ-ккмб</td><td>Г-094（2018/3/20上任）</td></tr>
-				<tr><td>2-1</td><td>2021年3月17日——2021年7月4日</td><td>Г-094</td><td>К-526-406Й</td></tr>
-				<tr><td>2-2</td><td>2021年7月5日——2021年7月31日</td><td>К-526-406Й</td><td>А-8139-21Б</td></tr>
-				<tr><td>2-3</td><td>2021年8月1日——2021年10月9日</td><td>А-8139-21Б</td><td>С-2231-63Д</td></tr>
-				<tr><td>2-4</td><td>2021年10月10日——2021年10月31日</td><td>А-8139-21Б</td><td>Г-6054-18К</td></tr>
-				<tr><td>2-5</td><td>2021年11月1日——2021年2月14日</td><td>ОпенГ-ккмб</td><td>Г-6054-18К</td></tr>
-				<tr><td>3</td><td>2021年2月15日——今</td><td>ОпенГ-ккмб</td><td>Г-6054-18К</td></tr>
-			</table>
-			<h3>2.哈儿实验室苏维埃</h3>
-			<p>
-				&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室苏维埃直接领导哈儿实验室总部的一切事务及各一级分部（分所）的基本事务。哈儿实验室苏维埃包括：主席1人；副主席1人；主席行政团20-22人，辅助主席及副主席行政；实验室总部代表20人；实验室各一级分部代表各25人。共计717-719人。哈儿实验室苏维埃以及哈儿实验室各级分部（分所）苏维埃在必要情况下均可向下越级指示。哈儿实验室各分部（分所）苏维埃包括：主席1人；副主席1人；主席执行团5-7人，辅助主席及副主席行政；该级分部（分所）代表15人；其下一级分部（分所）代表各20人（若无下一级则不设）。
-			</p>
-		</p>
-		<h2>四、发展目标</h2>
-		<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;在哈儿共产党据马克思列宁主义的领导下，协助哈儿国及全体哈儿国人民，走向共产主义的最终胜利。
-		</p>
-		以上是对哈儿实验室的简略介绍。如果希望与我们共同为共产主义的胜利而奋斗，请咨询哈儿实验室外事活动部（Хаер Лаботий Опнедека Ерюна Форетон, ОЕФ）。<br>
-		<strong style="color: #FF0000;">全世界无产者，联合起来！</strong><br>
-	</p>
-<!--一→h2；1→h3；①→h4-->
+<!-- Chinese Version -->
+<div class="zh post-container">
+    {% capture about_zh %}{% include about/zh.md %}{% endcapture %}
+    {{ about_zh | markdownify }}
 </div>
 
-<!-- Gitalk 评论 start  -->
-{% if site.gitalk.enable %}
-<!-- Gitalk link  -->
-<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
-<script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
+<!-- Russian Version (We need a translator) -->
+<div class="en post-container">
+    {% capture about_en %}{% include about/en.md %}{% endcapture %}
+    {{ about_en | markdownify }}
+</div>
 
-<div id="gitalk-container"></div>
+
+{% if site.disqus_username %}
+<!-- disqus 评论框 start -->
+<div class="comment">
+    <div id="disqus_thread" class="disqus-thread">
+
+    </div>
+</div>
+<!-- disqus 评论框 end -->
+
+<!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
-	var gitalk = new Gitalk({
-		clientID: '{{site.gitalk.clientID}}',
-		clientSecret: '{{site.gitalk.clientSecret}}',
-		repo: '{{site.gitalk.repo}}',
-		owner: '{{site.gitalk.owner}}',
-		admin: ['{{site.gitalk.admin}}'],
-		distractionFreeMode: {{site.gitalk.distractionFreeMode}},
-		id: 'about',
-	});
-	gitalk.render('gitalk-container');
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = "{{site.disqus_username}}";
+    var disqus_identifier = "{{site.disqus_username}}/{{page.url}}";
+    var disqus_url = "{{site.url}}{{page.url}}";
+
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
 </script>
+<!-- disqus 公共JS代码 end -->
 {% endif %}
-<!-- Gitalk end -->
