--- a/bdohlh/index.html
+++ b/bdohlh/index.html
@@ -36,7 +36,7 @@
 <li><strong>年龄: </strong>&nbsp;<span id="age">[Age]</span></li>
 <br>
 <br>
-<li><strong>哈儿综合能力等级: </strong>&nbsp;<a href="https://hssrgov.github.io/about/#hirg" target="_blank" id="dg">[DG]</a></li>
+<li><strong>哈儿综合能力等级: </strong>&nbsp;<a href="https://hssrgov.github.io/about/#krsh" target="_blank" id="dg">[DG]</a></li>
 <!--A+: #990000 A: #FF0000 B: #FFFF00 C : #00FFFF D: #00FF00-->
 <br>
 <br>
