--- a/bdohlh/index.html
+++ b/bdohlh/index.html
@@ -17,7 +17,7 @@
 </head>
 <body style="background: #000000">
 <div style="color: #FFFFFF; text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, monospace;" width="100%">
-<a href="https://hssrgov.github.io/" style="color: #FFFFFF" target="_blank">主页</a>
+<a href="https://www.khayer.cn/" style="color: #FFFFFF" target="_blank">主页</a>
 <hr><br>
 <div class="header">
 <h1>哈儿实验室危险哈儿数据库<br>База Данных Опасных Хаеры Лаборатории Хаера</h1>
@@ -36,7 +36,7 @@
 <li><strong>年龄: </strong>&nbsp;<span id="age">[Age]</span></li>
 <br>
 <br>
-<li><strong>哈儿综合能力等级: </strong>&nbsp;<a href="https://hssrgov.github.io/about/#krsh" target="_blank" id="dg">[DG]</a></li>
+<li><strong>哈儿综合能力等级: </strong>&nbsp;<a href="https://www.khayer.cn/about/#krsh" target="_blank" id="dg">[DG]</a></li>
 <!--A+: #990000 A: #FF0000 B: #FFFF00 C : #00FFFF D: #00FF00-->
 <br>
 <br>
