--- a/rekorder.html
+++ b/rekorder.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="shortcut icon" href="https://hssrgov.github.io/img/favicon.ico">
+<link rel="shortcut icon" href="https://khayer.cn/img/favicon.ico">
 <title>Рекордер - Лаборатория Хаера</title>
 </head>
 <body style="background: #000000;">
